fixed alignment issue

--- a/public/assets/front/css/main.css
+++ b/public/assets/front/css/main.css
@@ -1725,10 +1725,7 @@ overflow: hidden;margin-top: 155px;}
     margin-right: 10px;
     float: left;
   }
-  .product_listings{
-    /* margin-left: 23px; */
-    float: left;
-  }
+
 .seller_logo img{    width: 100%;
   height: auto;
   display: flex;
